--- a/composer.json
+++ b/composer.json
@@ -25,5 +25,11 @@
         "hoa/core"  : "dev-master",
         "hoa/stream": "dev-master"
     },
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "target-dir": "Hoa/Socket",
+    "autoload": {
+        "psr-0": {
+            "Hoa\\Socket": "."
+        }
+    }
 }
