--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,9 @@
         "hoa/core"  : "~2.0",
         "hoa/stream": "~0.0"
     },
+    "require-dev": {
+        "hoa/test": "~1.0"
+    },
     "autoload": {
         "psr-4": {
             "Hoa\\Socket\\": "."
