fix(composer) minimum-stability dev for php7.1

--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,8 @@
         "docs"  : "https://central.hoa-project.net/Documentation/Library/Socket",
         "source": "https://central.hoa-project.net/Resource/Library/Socket"
     },
+    "prefer-stable": true,
+    "minimum-stability": "dev",
     "require": {
         "php"            : ">=7.1",
         "hoa/consistency": "dev-master",
